# vai

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Clippy.yml  Tests.yml
examples/: README.md  character_recognition.rs  delay.rs  dotfield.rs
src/: Untitled-1.txt  lib.rs  main.rs  vai.rs  vaid.rs
tests/: test.rs  vaid-tests.rs
