[package]
name = "vai"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Waugh <kenkron@gmail.com>"]
description = "Very Artificial Intelligence: a simple neural network"
readme = "README.md"
repository = "https://github.com/Kenkron/vai"
license = "MIT OR Apache-2.0"
keywords = ["ai", "evolutionary", "neural", "network"]

[dependencies]
nalgebra = { version = "0.32.1", features = ["rand"] }
macroquad = { version = "0.3.25", optional = true }
rand = "0.8.5"

[dev-dependencies]
rayon = "1.6.1"

[lib]
path = "src/vai.rs"

[[example]]
name = "dotfield"
required-features = ["macroquad"]

[[example]]
name = "character_recognition"
required-features = ["macroquad"]

[[example]]
name = "delay"
required-features = ["macroquad"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html